--- a/.ci/azure/mac.yml
+++ b/.ci/azure/mac.yml
@@ -56,7 +56,7 @@ jobs:
     submodules: recursive
     path: openvino
 
-  - checkout: openvino
+  - checkout: openvino_contrib
     clean: true
     lfs: false
     submodules: recursive
