Split Tiling transformation on stages

--- a/inference-engine/tests/functional/plugin/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/CMakeLists.txt
@@ -8,16 +8,16 @@ if (ENABLE_MKL_DNN)
     add_subdirectory(cpu)
 endif()
 
-if (ENABLE_CLDNN)
-    add_subdirectory(gpu)
-endif()
+#if (ENABLE_CLDNN)
+#    add_subdirectory(gpu)
+#endif()
+#
+#if (ENABLE_GNA)
+#    add_subdirectory(gna)
+#endif()
+#
+#if (ENABLE_MYRIAD)
+#    add_subdirectory(myriad)
+#endif()
 
-if (ENABLE_GNA)
-    add_subdirectory(gna)
-endif()
-
-if (ENABLE_MYRIAD)
-    add_subdirectory(myriad)
-endif()
-
-add_subdirectory(conformance)
+#add_subdirectory(conformance)
