--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DENABLE_PROFILING_ITT=ON -DSELECTIVE_BUILD=COLLECT ..
+          cmake -ENABLE_PYTHON=ON -DENABLE_PROFILING_ITT=ON -DSELECTIVE_BUILD=COLLECT ..
 
       - name: Check code style
         run: cmake --build build --target clang_format_check_all
