--- a/.github/workflows/code_style.yml
+++ b/.github/workflows/code_style.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt --assume-yes install libusb-1.0-0-dev
+          python3 -m pip install --upgrade pip
           python3 -m pip install -r ./inference-engine/ie_bridges/python/requirements.txt
           # Add for -DENABLE_PYTHON=ON, no cython
           python3 -m pip install -r ./inference-engine/ie_bridges/python/wheel/requirements-dev.txt
