--- a/ngraph/frontend/paddlepaddle/CMakeLists.txt
+++ b/ngraph/frontend/paddlepaddle/CMakeLists.txt
@@ -2,16 +2,18 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+set(TARGET_NAME "paddlepaddle_ngraph_frontend")
+
 file(GLOB_RECURSE LIBRARY_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
 file(GLOB_RECURSE LIBRARY_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
 file(GLOB_RECURSE LIBRARY_PUBLIC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
 
 if (TARGET ext_protobuf)
 #    add_dependencies(ngraph::paddlepaddle_ngraph_frontend ext_protobuf)
-    add_dependencies(paddlepaddle_ngraph_frontend ext_protobuf)
+    add_dependencies(${TARGET_NAME} ext_protobuf)
 endif()
 
-set(paddlepaddle_ngraph_frontend_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(${TARGET_NAME}_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Create named folders for the sources within the .vcproj
 # Empty name lists them directly under the .vcproj
@@ -42,59 +44,59 @@ foreach(INFILE ${proto_files})
     list(APPEND PROTO_HDRS "${OUTPUT_PB_HEADER}")
 endforeach()
 
-add_custom_target(paddlepaddle_ngraph_frontend_proto DEPENDS ${PROTO_SRCS} ${PROTO_HDRS})
+add_custom_target(${TARGET_NAME}_proto DEPENDS ${PROTO_SRCS} ${PROTO_HDRS})
 
 set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS} PROPERTIES GENERATED TRUE)
 
 # Disable all warnings for generated code
 set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS} PROPERTIES COMPILE_FLAGS -w)
 
-include_directories(${Protobuf_INCLUDE_DIRS} ${paddlepaddle_ngraph_frontend_INCLUDE_DIR})
+include_directories(${Protobuf_INCLUDE_DIRS} ${${TARGET_NAME}_INCLUDE_DIR})
 
 # Create shared library
-add_library(paddlepaddle_ngraph_frontend SHARED  ${LIBRARY_SRC} ${LIBRARY_HEADERS} ${LIBRARY_PUBLIC_HEADERS} ${PROTO_SRCS} ${PROTO_HDRS})
+add_library(${TARGET_NAME} SHARED  ${LIBRARY_SRC} ${LIBRARY_HEADERS} ${LIBRARY_PUBLIC_HEADERS} ${PROTO_SRCS} ${PROTO_HDRS})
 
-add_dependencies(paddlepaddle_ngraph_frontend libprotobuf paddlepaddle_ngraph_frontend_proto)
+add_dependencies(${TARGET_NAME} libprotobuf paddlepaddle_ngraph_frontend_proto)
 
 if(NOT WIN32)
     # Addition dependency on static libprotobuf for non-Windows
-    add_dependencies(paddlepaddle_ngraph_frontend libprotobuf_static)
+    add_dependencies(${TARGET_NAME} libprotobuf_static)
 endif()
 
-target_include_directories(paddlepaddle_ngraph_frontend
+target_include_directories(${TARGET_NAME}
         PRIVATE
             ${CMAKE_CURRENT_SOURCE_DIR}/src
             ${FRONTEND_INCLUDE_PATH}
             ${CMAKE_CURRENT_BINARY_DIR})
 
 if(COMMAND ie_add_vs_version_file)
-    ie_add_vs_version_file(NAME paddlepaddle_ngraph_frontend
+    ie_add_vs_version_file(NAME ${TARGET_NAME}
                            FILEDESCRIPTION "FrontEnd to load and convert PaddlePaddle file format")
 endif()
 
 if(WIN32)
-    target_link_libraries(paddlepaddle_ngraph_frontend PRIVATE libprotobuf PUBLIC ngraph PRIVATE ngraph::builder)
+    target_link_libraries(${TARGET_NAME} PRIVATE libprotobuf PUBLIC ngraph PRIVATE ngraph::builder)
 else()
-    target_link_libraries(paddlepaddle_ngraph_frontend PRIVATE ${PROTOBUF_STATIC_LIB_OUTPUT} PUBLIC ngraph PRIVATE ngraph::builder)
+    target_link_libraries(${TARGET_NAME} PRIVATE ${PROTOBUF_STATIC_LIB_OUTPUT} PUBLIC ngraph PRIVATE ngraph::builder)
 endif()
 
-target_link_libraries(paddlepaddle_ngraph_frontend PRIVATE frontend_manager)
+target_link_libraries(${TARGET_NAME} PRIVATE frontend_manager)
 
-add_clang_format_target(paddlepaddle_ngraph_frontend_clang FOR_TARGETS paddlepaddle_ngraph_frontend
+add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME}
                         EXCLUDE_PATTERNS ${PROTO_SRCS} ${PROTO_HDRS})
 
 # TODO: Consider to remove the following block (inherited from onnx_import just in case).
 if (CMAKE_CXX_COMPILER_ID MATCHES "^(Apple)?Clang$")
-    target_compile_options(paddlepaddle_ngraph_frontend PRIVATE -Wno-undef -Wno-reserved-id-macro -Wno-switch-enum
+    target_compile_options(${TARGET_NAME} PRIVATE -Wno-undef -Wno-reserved-id-macro -Wno-switch-enum
             -Wno-invalid-offsetof -Wno-shorten-64-to-32 -Wno-unused-macros -Wno-missing-variable-declarations
             -Wno-unused-private-field -Wno-shadow -Wno-deprecated PUBLIC -Wno-undefined-func-template)
 endif()
 
-#install(TARGETS paddlepaddle_ngraph_frontend EXPORT ngraphTargets
-#        RUNTIME DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph
-#        ARCHIVE DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph
-#        LIBRARY DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph)
-#
-#if (NGRAPH_EXPORT_TARGETS_ENABLE)
-#    export(TARGETS paddlepaddle_ngraph_frontend NAMESPACE ngraph:: APPEND FILE "${NGRAPH_TARGETS_FILE}")
-#endif()
+install(TARGETS ${TARGET_NAME} EXPORT ngraphTargets
+        RUNTIME DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph
+        ARCHIVE DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph
+        LIBRARY DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph)
+
+if (NGRAPH_EXPORT_TARGETS_ENABLE)
+    export(TARGETS ${TARGET_NAME} NAMESPACE ngraph:: APPEND FILE "${NGRAPH_TARGETS_FILE}")
+endif()
