--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -9,8 +9,12 @@ if(NOT DEFINED OpenVINO_MAIN_SOURCE_DIR)
 endif()
 
 if(ENABLE_PYTHON)
-    find_package(PythonInterp 3 REQUIRED)
-    set(PYTHON_VERSION python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
+    find_package(PythonLibs 3 REQUIRED)
+    if(PYTHONLIBS_VERSION_STRING MATCHES "^([0-9]+)\.([0-9]+).*")
+        set(PYTHON_VERSION python${CMAKE_MATCH_1}.${CMAKE_MATCH_2})
+    else()
+        message(FATAL_ERROR "Failed to extract python major.minor from ${PYTHONLIBS_VERSION_STRING}")
+    endif()
 
     set(TARGET_NAME "python_tools")
 
