create negative type_prop tests

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -158,6 +158,7 @@ set(SRC
     type_prop/mish.cpp
     type_prop/mod.cpp
     type_prop/mvn.cpp
+    type_prop/negative.cpp
     type_prop/non_max_suppression.cpp
     type_prop/non_zero.cpp
     type_prop/normalize.cpp
