Add backend tests sceleton.

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -455,6 +455,7 @@ set(MULTI_TEST_SRC
     backend/unhandled_op.in.cpp
     backend/unsqueeze.in.cpp
     backend/validate_call.in.cpp
+    backend/variadic_split.in.cpp
     backend/zero_sized.in.cpp
 )
 
