[GNA] Remove transposes around MatMul

--- a/inference-engine/tests/functional/plugin/gna/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/gna/CMakeLists.txt
@@ -7,10 +7,13 @@ set(TARGET_NAME gnaFuncTests)
 addIeTargetTest(
         NAME ${TARGET_NAME}
         ROOT ${CMAKE_CURRENT_SOURCE_DIR}
+        INCLUDES
+            ${IE_MAIN_SOURCE_DIR}/src/gna_plugin/transformations
         DEPENDENCIES
             GNAPlugin
         LINK_LIBRARIES
             funcSharedTests
+            GNAPlugin_test_static
         ADD_CPPLINT
         LABELS
             GNA
