--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -72,6 +72,7 @@ set(SRC
     op_eval/mish.cpp
     op_eval/non_zero.cpp
     op_eval/reduce_max.cpp
+    op_eval/reduce_min.cpp
     op_eval/reduce_prod.cpp
     op_eval/reduce_sum.cpp
     op_eval/roi_align.cpp
